--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header"></div>
-            <div class="supervisor"></div>
-            <div class="team-builder"></div>
-            <div class="karma"></div>
-            <div class="calculator"></div>
+            <div class="header">
+                <h2> Reliable, efficient delivery </h2>
+                <h1> Powered by technology</h1>
+                <p> Our artificial intelligence powered tools use millions of project data</p>
+                <p>points to ensre that your project is successful</p>
+            </div>
+            <div class="supervisor">
+                <h3>Supervisor</h3>
+                <p>Monitors activity to identify project roadblocks</p>
+            </div>
+            <div class="team-builder">
+                <h3>Team Builder</h3>
+                <p>Scans our talent network to create the optimal team for your project</p>
+            </div>
+            <div class="karma">
+                <h3>Karma</h3>
+                <p>Regularly evaluates our talent to ensure quality</p>
+            </div>
+            <div class="calculator">
+                <h3>Calculator</h3>
+                <p>Uses data from past projects to provide better delivery estimates</p>
+            </div>
         </div>
 
     </body>
